--- a/src/flavors/duwamish_flavor/static/css/custom.css
+++ b/src/flavors/duwamish_flavor/static/css/custom.css
@@ -4,6 +4,17 @@
  * NOTE: "With great power comes great responsibility."
  */
 
+#site-title a:link,
+#site-title a:visited {
+  display: block;
+  float: left;
+  width: 350px;
+  height: 50px;
+  overflow: hidden;
+  background-image: url(images/site-title_hey-duwamish.png);
+  background-size: 350px auto;
+  background-repeat: no-repeat;
+}
 
 /* =Header
 -------------------------------------------------------------- */
@@ -11,6 +22,33 @@
 
 /* =Media Queries
 -------------------------------------------------------------- */
+/* iphone 4 (320 x 480)*/
+
+@media only screen and (min-height: 440px) and (max-width: 60em) {
+  #map {
+    height: 292px;
+  }
+  #site-title a:link,
+  #site-title a:visited {
+    width: 180px;
+    height: 25px;
+    background-size: 180px auto;
+  }
+}
+
+@media only screen and (min-height: 480px) and (max-width: 60em) {
+  #map {
+    height: 332px;
+  }
+  #site-title a:link,
+  #site-title a:visited {
+    width: 180px;
+    height: 25px;
+    background-size: 180px auto;
+    margin: 10px 0 0 0;
+  }
+}
+
 
 @media only screen and (min-width: 768px) {
 }
