--- a/src/flavors/duwamish_flavor/templates/index.html
+++ b/src/flavors/duwamish_flavor/templates/index.html
@@ -2,7 +2,9 @@
 {% load i18n %}
 
 {% block site-title %}
-<a href="/">{{ config.app.name }}</a>
+<a href="/">
+  <img id="site-title-image" alt="{{ config.app.name }}"></img>
+</a>
 {% endblock %}
 
 {% block meta %}
