--- a/src/flavors/duwamish_flavor/templates/index.html
+++ b/src/flavors/duwamish_flavor/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block site-title %}
 <a href="/">
-  <img id="site-title-image" alt="{{ config.app.name }}"></img>
+  <img id="site-title-image" src="{{STATIC_URL}}css/images/site-title_hey-duwamish.png" alt="{{ config.app.name }}"></img>
 </a>
 {% endblock %}
 
