--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css">
   <link rel="stylesheet" href="{{ STATIC_URL }}css/default.css?deployed_at={{ settings.LAST_DEPLOY_DATE|urlencode:'' }}">
   {% else %}
-  <link rel="stylesheet" href="{{ STATIC_URL }}dist/app.css">
+  <link rel="stylesheet" href="{{ STATIC_URL }}dist/bundle.css"></link>
   {% endif %}
 
   <!-- Flavor's Custom Stylesheet -->
@@ -175,7 +175,9 @@
   <script src="{{STATIC_URL}}libs/handlebars-helpers.js"></script>
   {% else %}
   <script src="{{STATIC_URL}}dist/libs.min.js"></script>
-  <script src="{{STATIC_URL}}dist/preload.js"></script>
+  <!--   TODO: build libraries with npm instead of bower -->
+  <!-- <script src="{{STATIC_URL}}dist/lib-bundle.js"></script> -->
+  <script src="{{STATIC_URL}}dist/preload-bundle.js"></script>
   {% endif %}
 
   <script>
@@ -247,7 +249,7 @@
   <script src="{{STATIC_URL}}js/views/legend-view.js"></script>
   <script src="{{STATIC_URL}}js/routes.js"></script>
   {% else %}
-  <script src="{{STATIC_URL}}dist/app.js"></script>
+  <script src="{{STATIC_URL}}dist/bundle.js"></script>
   {% endif %}
 
   <script src="{{API_ROOT}}users/current?format=jsonp&callback=bootstrapCurrentUser"></script>
