--- a/src/flavors/trees/templates/index.html
+++ b/src/flavors/trees/templates/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block site-title %}
-<a href="{{ config.app.link }}"><img src="/static/css/images/12000_logo_wide.png"></a>
+<a href="{{ config.app.link }}">{{ config.app.title }}</a>
 {% endblock %}
 
 {% block meta %}
