--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -623,6 +623,25 @@ a.logout-btn {
   border-radius: 4px;
 }
 
+.cluster-large {
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: greenyellow;
+  text-align: center;
+  font-size: 24px;
+}
+.cluster-small {
+  border-radius: 30px;
+  width: 60px;
+  height: 60px;
+  background-color: #ffdb58;
+  text-align: center;
+  font-size: 24px;
+  padding-top: 10px;
+  box-sizing: border-box;
+}
+
 
 /* =Progress Bars
 -------------------------------------------------------------- */
