Set new start location and favicon

--- a/src/flavors/trees/templates/index.html
+++ b/src/flavors/trees/templates/index.html
@@ -58,6 +58,7 @@
  -->
 
 {% block includes %}
+<link rel="shortcut icon" href="{{ config.static_url }}css/images/markers/tree.png">
 <script>
   (function(S) {
 // ========================================
