--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -259,6 +259,10 @@ textarea {
   padding: 1em;
 }
 
+.form-field {
+  margin: 0 0 .25em;
+}
+
 /* Images */
 img {
   max-width: 100%;
@@ -599,7 +603,7 @@ a.logout-btn {
   font-weight: bold;
   text-shadow: -1px 1px 0 rgba(255,255,255,0.5);
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
   padding: 0.75em 1em 0.875em;
   border-radius: 0.325em;
 }
