Tweak .form-field spacing settings

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -260,7 +260,7 @@ textarea {
 }
 
 .form-field {
-  margin: 0 0 .25em;
+  margin: 0 0 1em;
 }
 
 /* Images */
@@ -603,7 +603,7 @@ a.logout-btn {
   font-weight: bold;
   text-shadow: -1px 1px 0 rgba(255,255,255,0.5);
   text-align: center;
-  margin-bottom: 0.5em;
+  margin-bottom: 1em;
   padding: 0.75em 1em 0.875em;
   border-radius: 0.325em;
 }
