--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1014,8 +1014,8 @@ a.auth-inline {
     width: 40px; }
   @media (min-width: 768px) {
     .sidebar {
-      top: 10px;
-      bottom: 10px;
+      top: 75px;
+      bottom: 40px;
       transition: width 500ms; } }
   @media (min-width: 768px) and (max-width: 991px) {
     .sidebar {
@@ -1065,7 +1065,7 @@ a.auth-inline {
         background-color: #eee; }
       .sidebar-tabs > li.active, .sidebar-tabs > ul > li.active {
         color: #fff;
-        background-color: #0074d9; }
+        background-color: #007fbf; }
       .sidebar-tabs > li.disabled, .sidebar-tabs > ul > li.disabled {
         color: rgba(51, 51, 51, 0.4); }
         .sidebar-tabs > li.disabled:hover, .sidebar-tabs > ul > li.disabled:hover {
@@ -1124,7 +1124,7 @@ a.auth-inline {
   line-height: 40px;
   font-size: 14.4pt;
   color: #fff;
-  background-color: #0074d9; }
+  background-color: #007fbf; }
   .sidebar-right .sidebar-header {
     padding-left: 40px; }
 
@@ -2011,7 +2011,7 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     width: 40%;
   }
   .activity-enabled.content-visible #map-container {
-    width: 30%;
+    width: 50%;
   }
   .geocoding-bar-enabled #map-container {
     top: 8.5em;
@@ -2030,8 +2030,8 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     font-size: 1.25em;
     padding: 0;
     position: absolute;
-    left: 1.5em;
-    bottom: 2em;
+    right: 2em;
+    top: 2em;
     box-shadow: none;
     border-bottom: 0;
   }
@@ -2064,8 +2064,8 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     box-shadow: -0.325em 0 0 rgba(0,0,0,0.1);
   }
   .activity-enabled #content {
-    left: 30%;
-    right: 18em;
+    left: 50%;
+    /*right: 18em;*/
   }
   .geocoding-bar-enabled #content {
     top: 8.5em;
@@ -2169,6 +2169,7 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
   .activity-enabled #map-container {
     right: 0;  /* width of #master-legend */
   }
+
   /* The Ticker */
   #ticker {
     right: 0;
@@ -2261,13 +2262,13 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     left: 60%;
   }
   .activity-enabled #content {
-    left: 45%;
+    left: 60%;
   }
   .content-visible #map-container {
     width: 60%;
   }
   .activity-enabled.content-visible #map-container {
-    width: 45%;
+    width: 60%;
   }
 }
 
@@ -2287,4 +2288,73 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     background-size: contain;
   }
 
+}
+
+/* Development Styles */
+
+/* Multi-step place form */
+
+form.dev-place-form-choice {
+
+}
+form.dev-place-form-choice .toggle-sibling-input {
+  position: absolute;
+  left: -9999px;
+}
+form.dev-place-form-choice .toggle-sibling-label.button {
+  display: block;
+  float: left;
+  width: 40%;
+  font-size: 100%;
+  padding: 1em 1em;
+  margin: 0 2% 2% 0;
+  cursor:pointer;
+  background-color: #dff7ff;
+  color: #6c7180;
+}
+
+form.dev-place-form-choice .toggle-sibling-label.button img {
+  vertical-align: middle;
+  width: 2em;
+  margin-right: .5em
+}
+form.dev-place-form-choice .toggle-sibling-label.button strong {
+}
+
+form.dev-place-form-choice .toggle-sibling-label.button:hover {
+  color: white;
+}
+form.dev-place-form-choice .observation-label.button:hover {
+  background-color: #63c2c0;
+}
+form.dev-place-form-choice .question-label.button:hover {
+  background-color: #d5d72e;
+}
+form.dev-place-form-choice .idea-label.button:hover {
+  background-color: #fc9229;
+}
+form.dev-place-form-choice .complaint-label.button:hover {
+  background-color: #ff0000;
+}
+
+form.dev-place-form-choice input:checked+.toggle-sibling-label.button {
+  background-color: #008CBA;
+  color: #fff;
+}
+
+form.dev-place-form-choice input:checked+.observation-label.button {
+  background-color: #63c2c0;
+}
+form.dev-place-form-choice input:checked+.question-label.button {
+  background-color: #d5d72e;
+}
+form.dev-place-form-choice input:checked+.idea-label.button {
+  background-color: #fc9229;
+}
+form.dev-place-form-choice input:checked+.complaint-label.button {
+  background-color: #ff0000;
+}
+
+form.dev-place-choice-child-form {
+  display: none;
 }
