--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -2358,3 +2358,65 @@ form.dev-place-form-choice input:checked+.complaint-label.button {
 form.dev-place-choice-child-form {
   display: none;
 }
+
+/* v2 Multi-step place form */
+
+#place-form-type-choice {
+
+}
+#place-form-type-choice a.button {
+  display: block;
+  float: left;
+  width: 40%;
+  font-size: 100%;
+  padding: 1em 1em;
+  margin: 0 2% 2% 0;
+  cursor:pointer;
+  background-color: #dff7ff;
+  color: #6c7180;
+}
+
+#place-form-type-choice a.button img {
+  vertical-align: middle;
+  width: 2em;
+  margin-right: .5em
+}
+#place-form-type-choice a.button strong {
+}
+
+#place-form-type-choice a.button:hover {
+  color: white;
+}
+#place-form-type-choice a.button:hover {
+  background-color: #63c2c0;
+}
+#place-form-type-choice a.button:hover {
+  background-color: #d5d72e;
+}
+#place-form-type-choice a.button:hover {
+  background-color: #fc9229;
+}
+#place-form-type-choice a.button:hover {
+  background-color: #ff0000;
+}
+
+#place-form-type-choice a.button.active {
+  background-color: #008CBA;
+  color: #fff;
+}
+
+#place-form-type-choice #observation-form-type a.button.active {
+  background-color: #63c2c0;
+}
+
+#place-form-type-choice #question-form-type a.button.active {
+  background-color: #d5d72e;
+}
+
+#place-form-type-choice #idea-form-type a.button.active {
+  background-color: #fc9229;
+}
+
+#place-form-type-choice #complaint-form-type a.button.active {
+  background-color: #ff0000;
+}
