Migrate duwamish-specific routes code into duwamish flavor

--- a/src/flavors/duwamish_flavor/templates/index.html
+++ b/src/flavors/duwamish_flavor/templates/index.html
@@ -61,6 +61,7 @@
 
 {% block includes %}
 <!--<script src="{{STATIC_URL}}js/views/commitment-view.js"></script>-->
+<script src="{{STATIC_URL}}js/duwamish-routes.js"></script>
 <script>
   (function(S) {
 // ========================================
