Migrate duwamish-specific app-view code into duwamish flavor

--- a/src/flavors/duwamish_flavor/templates/index.html
+++ b/src/flavors/duwamish_flavor/templates/index.html
@@ -62,6 +62,7 @@
 {% block includes %}
 <!--<script src="{{STATIC_URL}}js/views/commitment-view.js"></script>-->
 <script src="{{STATIC_URL}}js/duwamish-routes.js"></script>
+<script src="{{STATIC_URL}}js/views/duwamish-app-view.js"></script>
 <script>
   (function(S) {
 // ========================================
