On mobile breakpoint hide side-bar show/hide toggle

--- a/src/flavors/duwamish_flavor/static/css/custom.css
+++ b/src/flavors/duwamish_flavor/static/css/custom.css
@@ -22,6 +22,12 @@
 /* iphone 4 (320 x 480)*/
 
 @media only screen and (min-height: 440px) and (max-width: 60em) {
+  #side-bar-show-button {
+    display: none;
+  }
+  #side-bar #sidebar-close {
+    display: none;
+  }
   #map {
     height: 292px;
   }
