Fix mobile css issues

--- a/src/flavors/duwamish_flavor/static/css/custom.css
+++ b/src/flavors/duwamish_flavor/static/css/custom.css
@@ -13,6 +13,17 @@
   overflow: hidden;
 }
 
+/* default for other media */
+@media only screen and (min-width: 60em) {
+  #add-place-btn-container {
+    right: 2em;
+    top: 2em;
+    /* override the defaults: */
+    left: unset;
+    bottom: unset;
+  }
+}
+
 /* =Header
 -------------------------------------------------------------- */
 
@@ -54,6 +65,7 @@
 }
 
 @media only screen and (min-width: 1300px) {
+
 }
 
 
