Re-sort report form elements

--- a/src/flavors/duwamish_flavor/static/css/custom.css
+++ b/src/flavors/duwamish_flavor/static/css/custom.css
@@ -25,6 +25,9 @@
   #side-bar-show-button {
     display: none;
   }
+  #side-bar {
+    display: block;
+  }
   #side-bar #sidebar-close {
     display: none;
   }
