Shorten the map when page content is visible for user on mobile devices
This style change is in response to the open Mobile page views need to
be higher up on the screen #192 GitHub issue.

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1589,6 +1589,9 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
   #map {
     height: 292px;
   }
+  .content-visible #map {
+    height: 175px;  
+  }
   #site-title a:link,
   #site-title a:visited {
     font-size: 1.8em;
