--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -246,11 +246,14 @@
   <script src="{{STATIC_URL}}js/views/activity-view.js"></script>
   <script src="{{STATIC_URL}}js/views/app-view.js"></script>
   <script src="{{STATIC_URL}}js/views/layer-view.js"></script>
+  <script src="{{STATIC_URL}}js/views/basic-layer-view.js"></script>
   <script src="{{STATIC_URL}}js/views/sidebar-view.js"></script>
   <script src="{{STATIC_URL}}js/views/map-view.js"></script>
   <script src="{{STATIC_URL}}js/views/support-view.js"></script>
   <script src="{{STATIC_URL}}js/views/survey-view.js"></script>
   <script src="{{STATIC_URL}}js/views/place-detail-view.js"></script>
+  <script src="{{STATIC_URL}}js/views/mapbox-early-action-view.js"></script>
+  <script src="{{STATIC_URL}}js/views/mapbox-survey-view.js"></script>
   <script src="{{STATIC_URL}}js/views/place-form-view.js"></script>
   <script src="{{STATIC_URL}}js/views/place-list-view.js"></script>
   <script src="{{STATIC_URL}}js/views/place-counter-view.js"></script>
