Revert "Revert "Merge pull request #182 from smartercleanup/maxburto/frontend-form""
This reverts commit 913742826f9fdf3cd291d82d4cbc5f026177742f.

--- a/src/flavors/duwamish_flavor/templates/index.html
+++ b/src/flavors/duwamish_flavor/templates/index.html
@@ -61,6 +61,8 @@
 
 {% block includes %}
 <!--<script src="{{STATIC_URL}}js/views/commitment-view.js"></script>-->
+<script src="{{STATIC_URL}}js/duwamish-routes.js"></script>
+<script src="{{STATIC_URL}}js/views/duwamish-app-view.js"></script>
 <script>
   (function(S) {
 // ========================================
