--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1000,6 +1000,8 @@ a.auth-inline {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+
 /* =The Ticker
 -------------------------------------------------------------- */
 
@@ -1816,7 +1818,7 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     width: 40%;
   }
   .activity-enabled.content-visible #map-container {
-    width: 30%;
+    width: 50%;
   }
   .geocoding-bar-enabled #map-container {
     top: 8.5em;
@@ -1869,8 +1871,8 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     box-shadow: -0.325em 0 0 rgba(0,0,0,0.1);
   }
   .activity-enabled #content {
-    left: 30%;
-    right: 18em;
+    left: 50%;
+    /*right: 18em;*/
   }
   .geocoding-bar-enabled #content {
     top: 8.5em;
@@ -1953,14 +1955,31 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     margin-right: 0;
   }
 
+  /* The Side Bar Show Button */
+  #side-bar-show-button {
+    display: none;
+    position: absolute;
+    top: 11em;
+    color: white;
+    font-size: 1.25em;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: #007fbf;
+    margin: 0 -0.325em 0 0;
+    padding: 0.125em 0.625em 0.125em 0.625em;
+    border-radius: 0 0.325em 0.325em 0;
+    box-shadow: -0.325em 0.325em 0 rgba(0,0,0,0.1);
+    cursor: pointer;
+    z-index: 99;
+  }
+
   /* The Side Bar */
   #side-bar {
     position: absolute;
-    top: 4em; /* height of #site-header */
-    right: 0;
-    bottom: 0;
-    left: auto;
+    top: 0;
     width: 18em;
+    height: 100%;
+    padding-top: 4em;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     z-index: 15;
@@ -1974,6 +1993,18 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
   .activity-enabled #map-container {
     right: 0;  /* width of #master-legend */
   }
+  .side-bar-title {
+    margin: 0 0 0.25em 0;
+  }
+  .side-bar-title h1.sidebar-header {
+    float: left;
+  }
+  .side-bar-title #sidebar-close {
+    float: right;
+    font-size: 2em;
+    cursor: pointer;
+  }
+
   /* The Ticker */
   #ticker {
     right: 0;
@@ -2066,13 +2097,13 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     left: 60%;
   }
   .activity-enabled #content {
-    left: 45%;
+    left: 60%;
   }
   .content-visible #map-container {
     width: 60%;
   }
   .activity-enabled.content-visible #map-container {
-    width: 45%;
+    width: 60%;
   }
 }
 
