turn of report filters to avoid UX issue

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1137,7 +1137,7 @@ ul.recent-points {
   letter-spacing: 1px;
 }
 
-#master-legend .shareabouts-layer-li a {
+#master-legend .shareabouts-layer-li {
   font-size: 1.4em;
   letter-spacing: 2px;
 }
