--- a/src/flavors/duwamish_flavor/templates/index.html
+++ b/src/flavors/duwamish_flavor/templates/index.html
@@ -39,6 +39,8 @@
     <meta property="og:site_name" content="{{ config.app.title }}" />
     <meta property="og:title" content="{{ config.app.title }}" />
     <meta property="og:description" content="{{ config.app.meta_description }}" />
+    <meta name="og:image" content="{{STATIC_URL}}css/images/fb-thumbnail.png">
+
   {% endif%}
 {% endblock %}
 
